[gd_scene load_steps=7 format=2]

[ext_resource path="res://Levels/Assets/Cannonball.gd" type="Script" id=1]
[ext_resource path="res://Levels/Assets/ExplosionArea.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.490196, 0.4, 0.25098, 1 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.4
height = 0.8

[sub_resource type="SphereShape" id=3]
radius = 0.41

[sub_resource type="SphereShape" id=4]

[node name="Cannonball" type="RigidBody"]
collision_layer = 128
collision_mask = 73
mass = 10.0
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="ExplosionArea" type="Area" parent="."]
visible = false
collision_layer = 128
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="ExplosionArea"]
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Cannonball_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ExplosionArea" to="ExplosionArea" method="_on_ExplosionArea_body_entered"]
